--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
-greeting:
-  message: "hello"
-quarkus:
-  hibernate-orm:
-    database:
-      generation: "drop-and-create"
+#greeting:
+#  message: "hello"
+#quarkus:
+#  hibernate-orm:
+#    database:
+#      generation: "validate"
